# GravitySimulator2D

./: CMakeLists.txt  README.md  TODO.md
src/: main.cpp
src/shared/: classes.cpp
